<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_border"
    >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_border1"
        >

        <ImageButton
            android:id="@+id/lang_eng"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/icon_en"
            android:src="@mipmap/english" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:text="@string/en"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_border1"
        >

        <ImageButton
            android:id="@+id/lang_pl"
            android:contentDescription="@string/icon_pl"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/poland" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:text="@string/pl"
            />

    </LinearLayout>
</LinearLayout>